[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/hussar_bd/HussarBd.otf" type="DynamicFontData" id=1]
[ext_resource path="res://game_entities/report/SP_report.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 540, 135 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 540, 135 )
color = Color( 0.870588, 0.870588, 0.870588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 540, 135 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SP_name" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 540.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SupplyPoint Name"

[node name="Row1" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 29.0
margin_right = 540.0
margin_bottom = 69.0
rect_min_size = Vector2( 540, 40 )
custom_constants/separation = 20
alignment = 1

[node name="StockIn" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row1"]
margin_left = 65.0
margin_right = 116.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row1/StockIn"]
margin_top = 4.0
margin_right = 51.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stock In"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row1/StockIn"]
margin_top = 22.0
margin_right = 51.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="StockOut" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row1"]
margin_left = 136.0
margin_right = 198.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row1/StockOut"]
margin_top = 4.0
margin_right = 62.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stock Out"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row1/StockOut"]
margin_top = 22.0
margin_right = 62.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Waste" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row1"]
margin_left = 218.0
margin_right = 258.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row1/Waste"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waste"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row1/Waste"]
margin_top = 22.0
margin_right = 40.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="OpeningStock" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row1"]
margin_left = 278.0
margin_right = 370.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row1/OpeningStock"]
margin_top = 4.0
margin_right = 92.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opening Stock"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row1/OpeningStock"]
margin_top = 22.0
margin_right = 92.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="ClosingStock" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row1"]
margin_left = 390.0
margin_right = 474.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row1/ClosingStock"]
margin_top = 4.0
margin_right = 84.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Closing Stock"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row1/ClosingStock"]
margin_top = 22.0
margin_right = 84.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Row2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 73.0
margin_right = 540.0
margin_bottom = 113.0
rect_min_size = Vector2( 540, 40 )
custom_constants/separation = 20
alignment = 1

[node name="TicksMax" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row2"]
margin_left = 119.0
margin_right = 197.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksMax"]
margin_top = 4.0
margin_right = 78.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ticks at Max"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksMax"]
margin_top = 22.0
margin_right = 78.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="TicksMin" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row2"]
margin_left = 217.0
margin_right = 293.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksMin"]
margin_top = 4.0
margin_right = 76.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ticks at Min"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksMin"]
margin_top = 22.0
margin_right = 76.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="TicksWOProd" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row2"]
visible = false
margin_left = 223.0
margin_right = 383.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksWOProd"]
margin_top = 4.0
margin_right = 160.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ticks Without Production"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksWOProd"]
margin_top = 22.0
margin_right = 160.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="TicksWOCons" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row2"]
visible = false
margin_left = 215.0
margin_right = 391.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksWOCons"]
margin_top = 4.0
margin_right = 176.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ticks Without Consumption"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row2/TicksWOCons"]
margin_top = 22.0
margin_right = 176.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Efficiency" type="VBoxContainer" parent="ColorRect/VBoxContainer/Row2"]
margin_left = 313.0
margin_right = 420.0
margin_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/Row2/Efficiency"]
margin_top = 4.0
margin_right = 107.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Transit Efficiency"
align = 1

[node name="Value" type="Label" parent="ColorRect/VBoxContainer/Row2/Efficiency"]
margin_top = 22.0
margin_right = 107.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
